--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="styles.css" rel="stylesheet" />
-        <link href="resumestyle.css" rel="stlesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/resumestyle.css" rel="stlesheet" />
     </head>
 
 
