--- a/porscheinfo.html
+++ b/porscheinfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porsche Info</title>
-    <link href="resumestyle.css" rel="stylesheet" />
+    <link href="css/resumestyle.css" rel="stylesheet" />
 </head>
 <body>
     <header class="header">
